--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -81,9 +81,11 @@
     "bitcore-client": "^8.8.4",
     "bitcore-lib": "^8.8.4",
     "bitcore-lib-cash": "^8.8.4",
+    "zclassic-bitcore-lib": "^8.8.4",
     "bitcore-p2p": "^8.8.4",
     "bitcore-p2p-cash": "^8.8.4",
-    "bitcore-wallet-client": "^8.8.4",
+    "zclassic-bitcore-p2p": "^8.8.4",
+    "bitcore-wallet-client": "^8.8.4",    
     "body-parser": "1.18.3",
     "cors": "2.8.4",
     "crypto-wallet-core": "^8.8.4",
