--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -78,18 +78,18 @@
   "dependencies": {
     "JSONStream": "~1.3.1",
     "abi-decoder": "2.0.1",
+    "bcoin": "^1.0.2",
     "bitcore-client": "^8.8.4",
     "bitcore-lib": "^8.8.4",
     "bitcore-lib-cash": "^8.8.4",
-    "zclassic-bitcore-lib": "^8.8.4",
     "bitcore-p2p": "^8.8.4",
     "bitcore-p2p-cash": "^8.8.4",
-    "zclassic-bitcore-p2p": "^8.8.4",
-    "bitcore-wallet-client": "^8.8.4",    
+    "bitcore-wallet-client": "^8.8.4",
     "body-parser": "1.18.3",
+    "cjs": "0.0.11",
     "cors": "2.8.4",
     "crypto-wallet-core": "^8.8.4",
-    "heapdump": "0.3.12",
+    "heapdump": "^0.3.15",
     "http": "0.0.0",
     "lodash": "4.17.11",
     "lru-cache": "4.1.3",
@@ -106,7 +106,9 @@
     "through2": "2.0.3",
     "underscore": "1.8.3",
     "web3": "1.2.1",
-    "winston": "3.2.0"
+    "winston": "3.2.0",
+    "zclassic-bitcore-lib": "^8.8.4",
+    "zclassic-bitcore-p2p": "^8.8.4"
   },
   "gitHead": "012cc0216a9bc6b195035855bd17149bad41acd1"
 }
