--- a/packages/insight/package.json
+++ b/packages/insight/package.json
@@ -33,7 +33,7 @@
     "ionic:serve": "ionic-app-scripts serve --port 8200",
     "postinstall": "./node_modules/.bin/webdriver-manager update --gecko false",
     "start": "npm run ionic:serve",
-    "start:prod": "ENV=prod CHAIN=ZCL NETWORK=mainnet API_PREFIX=http://localhost:8200/api npm run ionic:serve",
+    "start:prod": "ENV=prod CHAIN=ZCL NETWORK=mainnet API_PREFIX=http://api.zclassic-ce.org:8200/api npm run ionic:serve",
     "test": "ng test --watch=false --code-coverage --no-progress",
     "fix:prettier": "prettier '{*,**/*}.{js,ts,md,json,css}' --write",
     "fix:tslint": "tslint --type-check --fix --project ."
