--- a/packages/zclassic-bitcore-lib/package.json
+++ b/packages/zclassic-bitcore-lib/package.json
@@ -91,6 +91,7 @@
   },
   "dependencies": {
     "bitcore-lib": "^8.8.4",
+    "blake2b": "^2.1.2",
     "bech32": "=1.1.3",
     "bn.js": "=4.11.8",
     "bs58": "^4.0.1",
