--- a/packages/zclassic-bitcore-p2p/package.json
+++ b/packages/zclassic-bitcore-p2p/package.json
@@ -19,20 +19,20 @@
     "type": "git",
     "url": "https://github.com/bitpay/bitcore-p2p.git"
   },
-
   "dependencies": {
+    "bcoin": "^1.0.2",
     "bitcore-lib": "^8.8.4",
-    "zclassic-bitcore-lib": "^8.8.4",
     "bloom-filter": "^0.2.0",
     "buffers": "bitpay/node-buffers#v0.1.2-bitpay",
-    "socks5-client": "^0.3.6"
+    "socks5-client": "^0.3.6",
+    "zclassic-bitcore-lib": "^8.8.4"
   },
   "devDependencies": {
     "bitcore-build": "^8.8.4",
     "brfs": "^1.2.0",
     "chai": "~1.10.0",
     "gulp": "^4.0.0",
-    "sinon": "^1.12.2" 
+    "sinon": "^1.12.2"
   },
   "license": "MIT",
   "gitHead": "012cc0216a9bc6b195035855bd17149bad41acd1"
