--- a/packages/zclassic-bitcore-p2p/package.json
+++ b/packages/zclassic-bitcore-p2p/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zclassic-bitcore-p2p",
-  "version": "8.8.4",
+  "version": "8.9.0",
   "description": "Interface to the Zclassic P2P network for bitcore",
   "main": "index.js",
   "scripts": {
@@ -21,19 +21,18 @@
   },
   "dependencies": {
     "bcoin": "^1.0.2",
-    "bitcore-lib": "^8.8.4",
+    "bitcore-lib": "^8.9.0",
     "bloom-filter": "^0.2.0",
     "buffers": "bitpay/node-buffers#v0.1.2-bitpay",
     "socks5-client": "^0.3.6",
-    "zclassic-bitcore-lib": "^8.8.4"
+    "zclassic-bitcore-lib": "^8.9.0"
   },
   "devDependencies": {
-    "bitcore-build": "^8.8.4",
+    "bitcore-build": "^8.9.0",
     "brfs": "^1.2.0",
     "chai": "~1.10.0",
     "gulp": "^4.0.0",
     "sinon": "^1.12.2"
   },
-  "license": "MIT",
-  "gitHead": "012cc0216a9bc6b195035855bd17149bad41acd1"
+  "license": "MIT"
 }
